--- a/clover-loyalty-example-pos/build.gradle
+++ b/clover-loyalty-example-pos/build.gradle
@@ -14,6 +14,10 @@ android {
     lintOptions {
         abortOnError false
     }
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
+    }
 
     buildTypes {
         release {
@@ -31,10 +35,10 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.1.1'
     api 'com.neovisionaries:nv-websocket-client:1.31'
     compile files('../libs/remote-pay-android-connector-4.0.0-SNAPSHOT.aar')
-    compile files('../libs/clover-remote-interface-252-SNAPSHOT.aar')
-    compile files('../libs/clover-android-sdk-225-SNAPSHOT.aar')
-    compile files('../libs/clover-android-loyalty-kit-225-SNAPSHOT.aar')
-    compile files('../libs/calc-274-SNAPSHOT.jar')
+    compile files('../libs/clover-remote-interface-259-SNAPSHOT.aar')
+    compile files('../libs/clover-android-sdk-231-SNAPSHOT.aar')
+    compile files('../libs/clover-android-loyalty-kit-231-SNAPSHOT.aar')
+    compile files('../libs/calc-280-SNAPSHOT.jar')
     compile 'com.android.support:support-v4:26.1.0'
     testCompile 'junit:junit:4.12'
     androidTestCompile('com.android.support.test.espresso:espresso-core:3.0.2', {
