--- a/loyalty-custom-tender/build.gradle
+++ b/loyalty-custom-tender/build.gradle
@@ -16,12 +16,16 @@ android {
             minifyEnabled false
         }
     }
+  compileOptions {
+    sourceCompatibility 1.8
+    targetCompatibility 1.8
+  }
 }
 
 dependencies {
     compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
-    compile files('../libs/clover-android-loyalty-kit-225-SNAPSHOT.aar')
+    compile files('../libs/clover-android-loyalty-kit-231-SNAPSHOT.aar')
     compile "com.android.support:support-annotations:28.0.0"
-    compile files('../libs/clover-android-sdk-225-SNAPSHOT.aar')
-    compile files('../libs/calc-274-SNAPSHOT.jar')
+    compile files('../libs/clover-android-sdk-231-SNAPSHOT.aar')
+    compile files('../libs/calc-280-SNAPSHOT.jar')
 }
