--- a/native-clover-loyalty/build.gradle
+++ b/native-clover-loyalty/build.gradle
@@ -18,6 +18,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
+    }
+
 }
 
 
@@ -25,10 +30,10 @@ dependencies {
     compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.1.1'
-    compile files('../libs/clover-android-loyalty-kit-225-SNAPSHOT.aar')
+    compile files('../libs/clover-android-loyalty-kit-231-SNAPSHOT.aar')
     compile "com.android.support:support-annotations:28.0.0"
-    compile files('../libs/clover-android-sdk-225-SNAPSHOT.aar')
-    compile files('../libs/calc-274-SNAPSHOT.jar')
+    compile files('../libs/clover-android-sdk-231-SNAPSHOT.aar')
+    compile files('../libs/calc-280-SNAPSHOT.jar')
     compile files('../libs/clover-cfp-sdk-4.0.0-SNAPSHOT.aar')
     compile 'com.android.support:support-v4:26.1.0'
     testCompile 'junit:junit:4.12'
